--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
 OPEN_AI_SECRET=YOUR_SECRET
-MONGODB_URL=YOUR_SECRET
+MONGODB_URL=mongodb+srv://rahul:yTBBPKBzZCGi9g7p@cluster0.nljavtd.mongodb.net/chatbot?retryWrites=true&w=majority
 JWT_SECRET=YOUR_SECRET
 COOKIE_SECRET=YOUR_SECRET
+
+
