--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
-OPEN_AI_SECRET=YOUR_SECRET
-MONGODB_URL=mongodb+srv://rahul:yTBBPKBzZCGi9g7p@cluster0.nljavtd.mongodb.net/chatbot?retryWrites=true&w=majority
+OPEN_AI_SECRET=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
+OPEN_AI_ORGANIZATION_ID=org-OmGSYJUCjyno7el3mRO3i79c
+MONGODB_URL=mongodb+srv://rahul:E5OWR5svPARNuX6T@cluster0.nljavtd.mongodb.net/chatbot?retryWrites=true&w=majority
 JWT_SECRET=YOUR_SECRET
 COOKIE_SECRET=YOUR_SECRET
+PORT= 5000
 
 
